--- a/.settings/com.aptana.formatter.epl.prefs
+++ b/.settings/com.aptana.formatter.epl.prefs
@@ -1,3 +1,3 @@
-#Thu Apr 12 20:13:12 EDT 2012
-com.aptana.formatter.profiles.active=CS4241
+#Thu Apr 12 20:28:44 EDT 2012
+com.aptana.formatter.profiles.active=Default Profile [built-in]2
 eclipse.preferences.version=1
